--- a/templates/about.html
+++ b/templates/about.html
@@ -82,6 +82,25 @@
     </div>
 </section>
 
+<section id = "languadges">
+    <div class="lan-cont">
+        <div class="front-end">
+            <img src = '{% static 'images/icons/html.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+        </div>
+        <div class="front-end">
+            <img src = '{% static 'images/icons/html.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+            <img src = '{% static 'images/icons/css.png' %}' class='frame-images' alt="Yuthila Banuka">
+        </div>
+    </div>
+</section>
+
 
 
   
