--- a/templates/home.html
+++ b/templates/home.html
@@ -6,14 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
+
 <body>
 
-
-    <!-- Navigation -->
-    <nav>
+<!-- this is the nav bar  -->
+<nav>
     <ul class="nav-links">
         <li><a href="{% url 'home' %}" class="nav-link">Home</a></li>
         <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
@@ -24,28 +23,19 @@
 
 
 
-    <!-- Home Section -->
+<!-- Home Section -->
 
-      <section id="home">
-        <img src="{% static 'images/dp5.png' %}" alt="Yuthila Banuka" class="profile-image">
-        <div>
+<section id="home">
+    <img src="{% static 'images/dp5.png' %}" alt="Yuthila Banuka" class="profile-image">
+    <div>
         <h1 class="intro-text">Hey, I'm Yuthila Banuka</h1>
-        
         <p class="intro-subtitle">AI & ML Enthusiast  |  AI Automation </p>
-        
-        <button class="projects-btn">Projects</button>
-         
-        </div>
-        
-        
-        
-    </section>
+        <button class="projects-btn"><a href ='projects/'>Projects</button>
+    </div>
+</section>
 
 
-  
 
-    
-    
-    <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
